linux-mt/tools/perf-target-aarch64_cortex-a53_musl/feature/test-pthread-attr-setaffinity-np.make.output
test-pthread-attr-setaffinity-np.c: In function 'main':
test-pthread-attr-setaffinity-np.c:15:8: error: implicit declaration of function 'pthread_attr_setaffinity_np'; did you mean 'pthread_setaffinity_np'? [-Werror=implicit-function-declaration]
  ret = pthread_attr_setaffinity_np(&thread_attr, sizeof(cs), &cs);
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~
        pthread_setaffinity_np
cc1: all warnings being treated as errors
